--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "0.4.2",
-    "grunt-contrib-jshint": "0.7.2"
+    "grunt-contrib-jshint": "0.8.0",
+    "grunt-jscs-checker": "0.4.0"
   }
 }
