Switch to LESS, build-based, more modular styling system
Run `grunt build` to build AFCH, or just use scripts/upload.py — this
will create all the necessary files in the /build directory, including
minified css based on the…

LESS files! That’s right, variables, nested selectors, and more. Expect
cleaner, tidier code…already switched much of it over.

Additionally, using LESS, our CSS selectors are much more specific,
pretty much 100% ensuring we’ll avoid future class/selector conflicts.

We now ALSO use a combination of classes and $afch.find() to ensure
that multiple AFCH instances can run at one time on a page.

Big commit, yay :)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "devDependencies": {
     "grunt": "0.4.2",
     "grunt-contrib-jshint": "0.8.0",
-    "grunt-jscs-checker": "0.4.0"
+    "grunt-jscs-checker": "0.4.0",
+    "grunt-contrib-less": "0.11.0",
+    "grunt-contrib-copy": "0.4.x",
+    "grunt-contrib-clean": "0.5.x",
+    "grunt-contrib-cssmin": "0.6.x",
+    "grunt-autoprefixer": "0.2.x"
   }
 }
