--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "grunt": "0.4.2",
     "grunt-contrib-jshint": "0.8.0",
-    "grunt-jscs-checker": "0.4.0",
+    "grunt-jscs": "0.4.0",
     "grunt-contrib-less": "0.11.0",
     "grunt-contrib-copy": "0.4.x",
     "grunt-contrib-clean": "0.5.x",
