jscs updates + compliance

--- a/.jscsrc
+++ b/.jscsrc
@@ -10,14 +10,7 @@
 	"requireSpacesInsideObjectBrackets": "all",
 	"disallowSpaceAfterObjectKeys": true,
 	"requireCommaBeforeLineBreak": true,
-	"disallowLeftStickedOperators": ["?", ">", ">=", "<", "<="],
-	"disallowRightStickedOperators": ["?", "/", "*", ":", "=", "==", "===", "!=", "!==", ">", ">=", "<", "<="],
-	"requireRightStickedOperators": ["!"],
-	"requireLeftStickedOperators": [","],
-	"disallowSpaceAfterPrefixUnaryOperators": ["++", "--", "+", "-", "~"],
-	"disallowSpaceBeforePostfixUnaryOperators": ["++", "--"],
-	"requireSpaceBeforeBinaryOperators": ["+", "-", "/", "*", "=", "==", "===", "!=", "!=="],
-	"requireSpaceAfterBinaryOperators": ["+", "-", "/", "*", "=", "==", "===", "!=", "!=="],
+	"requireSpacesInConditionalExpression": true,
 	"disallowMultipleLineBreaks": true,
 	"validateLineBreaks": "LF",
 	"validateQuoteMarks": "'",
