--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "grunt-contrib-less": "0.11.0",
     "grunt-exec": "~0.4.5",
     "grunt-jscs": "1.5.x",
-    "jest-cli": "0.1.x",
+    "jest-cli": "git://github.com/facebook/jest#0.5.x",
     "jquery": "~2.1.1"
   }
 }
