--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   "dependencies": {
   },
   "devDependencies": {
-    "grunt": "0.4.2",
-    "grunt-autoprefixer": "0.2.x",
-    "grunt-contrib-clean": "0.5.x",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "0.4.x",
-    "grunt-contrib-cssmin": "0.6.x",
-    "grunt-contrib-jshint": "0.8.0",
-    "grunt-contrib-less": "0.11.0",
-    "grunt-exec": "~0.4.5",
-    "grunt-jscs": "1.5.x",
-    "jest-cli": "git://github.com/facebook/jest#0.5.x",
-    "jquery": "~2.1.1"
+    "grunt": "^1.0.1",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-less": "^1.4.1",
+    "grunt-exec": "^3.0.0",
+    "grunt-jscs": "^3.0.1",
+    "jest-cli": "^12.1.1",
+    "jquery": "^3.2.1"
   }
 }
