--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-eslint": "^20.1.0",
     "grunt-exec": "^3.0.0",
     "jest-cli": "^12.1.1",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "minimist": "^1.2.5"
   }
 }
