--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "https://github.com/WPAFC/afch-rewrite/npm.git"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "generate-certificates": "node scripts/generate-certificates.js"
   },
   "dependencies": {
     "hogan.js": "^3.0.2"
@@ -31,6 +32,7 @@
     "grunt-exec": "^3.0.0",
     "jest-cli": "^12.1.1",
     "jquery": "^3.2.1",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "prompt-sync": "^4.2.0"
   }
 }
