--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "url": "https://github.com/WPAFC/afch-rewrite/npm.git"
   },
   "scripts": {
-    "test": "grunt test",
-    "generate-certificates": "node scripts/generate-certificates.js"
+    "test": "grunt test"
   },
   "dependencies": {
     "hogan.js": "^3.0.2"
   },
   "devDependencies": {
-    "deasync": "^0.1.21",
     "eslint": "^4.15.0",
     "eslint-config-wikimedia": "^0.5.0",
     "grunt": "^1.0.1",
