--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "test": "grunt test",
     "generate-certificates": "node scripts/generate-certificates.js"
   },
+  "dependencies": {
+    "hogan.js": "^3.0.2"
+  },
   "devDependencies": {
     "eslint": "^7.31.0",
     "eslint-config-wikimedia": "^0.20.0",
@@ -22,6 +25,7 @@
     "grunt": "^1.4.1",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-less": "^3.0.0",
