When accepting biography, autofills name when there is a paranthetical disambiguation

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "testMatch": [ "**/__tests__/**/test-*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)" ]
+    "testMatch": [
+      "**/__tests__/**/test-*.[jt]s?(x)",
+      "**/?(*.)+(spec|test).[jt]s?(x)"
+    ]
   }
 }
