--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "testMatch": [ "**/__tests__/**/test-*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)" ]
+    "testMatch": [ "**/tests/**/test-*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)" ]
   }
 }
