ci: split unit tests and linter into separate runners
In the event of continuous integration failure on a pull request, makes it easier to see what the problem is.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "test": "grunt test",
+    "teststyle": "grunt teststyle",
     "generate-certificates": "node scripts/generate-certificates.js"
   },
   "dependencies": {
