--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: npm install
-    - run: npm run teststyle
+    - run: npm run lint
       name: AFCH linter
