--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "teststyle": "grunt teststyle",
+    "lint": "grunt lint",
     "generate-certificates": "node scripts/generate-certificates.js"
   },
   "dependencies": {
