--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "generate-certificates": "node scripts/generate-certificates.js"
+    "lint": "grunt lint"
   },
   "dependencies": {
     "hogan.js": "^3.0.2"
