--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "grunt-eslint": "^23.0.0",
     "grunt-exec": "^3.0.0",
     "jest-cli": "^27.0.6",
-    "jquery": "^3.6.0",
-    "minimist": "^1.2.5"
+    "jquery": "^3.6.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
