update organization and repo name in package.json
Per #244 and #283

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "afch-rewrite",
+  "name": "afc-helper",
   "version": "0.9.1",
   "description": "A tool for reviewing Articles for Creation submissions on the English Wikipedia.",
-  "homepage": "https://github.com/WPAFC/afch-rewrite",
+  "homepage": "https://github.com/wikimedia-gadgets/afc-helper",
   "bugs": {
-    "url": "https://github.com/WPAFC/afch-rewrite/issues"
+    "url": "https://github.com/wikimedia-gadgets/afc-helper/issues"
   },
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/WPAFC/afch-rewrite/npm.git"
+    "url": "https://github.com/wikimedia-gadgets/afc-helper/npm.git"
   },
   "scripts": {
     "test": "grunt test",
