fix linter errors
should be a no-op

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,13 +18,9 @@
 	"rules": {
 		"camelcase": 0,
 		"eqeqeq": 0,
-		"jsdoc/check-param-names": 0,
-		"jsdoc/check-tag-names": 0,
-		"jsdoc/no-undefined-types": 0,
+		"jsdoc/require-param": 0,
 		"jsdoc/require-param-type": 0,
 		"jsdoc/require-returns": 0,
-		"jsdoc/require-returns-check": 0,
-		"jsdoc/valid-types": 0, 
 		"max-len": 0,
 		"max-statements-per-line": 0,
 		"no-console": 0,
@@ -40,7 +36,6 @@
 		"no-useless-concat": 0,
 		"no-useless-escape": 0,
 		"one-var": 0,
-		"spaced-comment": 0,
 		"vars-on-top": 0
 	},
 	"settings": {
