fix more linter errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,6 @@
 		"jsdoc/require-param-type": 0,
 		"jsdoc/require-returns": 0,
 		"max-len": 0,
-		"max-statements-per-line": 0,
 		"no-console": 0,
 		"no-global-assign": 0,
 		"no-implicit-globals": 0,
@@ -32,11 +31,7 @@
 		"no-undef": 0,
 		"no-underscore-dangle": 0,
 		"no-unused-vars": 0,
-		"no-use-before-define": 0,
-		"no-useless-concat": 0,
-		"no-useless-escape": 0,
-		"one-var": 0,
-		"vars-on-top": 0
+		"no-use-before-define": 0
 	},
 	"settings": {
 		"jsdoc": {
