eslint: set many rules from "off" to "warn"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,21 +17,21 @@
 	},
 	"rules": {
 		"camelcase": "off",
-		"eqeqeq": "off",
-		"jsdoc/require-param": "off",
-		"jsdoc/require-param-type": "off",
-		"jsdoc/require-returns": "off",
+		"eqeqeq": "warn",
+		"jsdoc/require-param": "warn",
+		"jsdoc/require-param-type": "warn",
+		"jsdoc/require-returns": "warn",
 		"max-len": "off",
-		"no-console": "off",
-		"no-global-assign": "off",
-		"no-implicit-globals": "off",
-		"no-new": "off",
-		"no-prototype-builtins": "off",
-		"no-shadow": "off",
-		"no-undef": "off",
-		"no-underscore-dangle": "off",
-		"no-unused-vars": "off",
-		"no-use-before-define": "off"
+		"no-console": "warn",
+		"no-global-assign": "warn",
+		"no-implicit-globals": "warn",
+		"no-new": "warn",
+		"no-prototype-builtins": "warn",
+		"no-shadow": "warn",
+		"no-undef": "warn",
+		"no-underscore-dangle": "warn",
+		"no-unused-vars": "warn",
+		"no-use-before-define": "warn"
 	},
 	"settings": {
 		"jsdoc": {
