fix linter errors, remove dead code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,11 +19,11 @@
 		"jsdoc/require-param-type": "warn",
 		"jsdoc/require-returns": "warn",
 		"max-len": "off",
-		"no-console": "warn",
+		"no-console": "off",
 		"no-global-assign": "warn",
 		"no-implicit-globals": "warn",
 		"no-new": "warn",
-		"no-prototype-builtins": "warn",
+		"no-prototype-builtins": "off",
 		"no-shadow": "off",
 		"no-undef": "warn",
 		"no-underscore-dangle": "off",
