upgrade eslint-config-wikimedia from 0.20.0 to 0.27.0 (#351)
* eslint: change from integers to strings (more readable)

* eslint: set many rules from "off" to "warn"

* remove jsdoc as a separate dependency, comes with eslint-config-wikimedia

* upgrade eslint and eslint-config-wikimedia to latest version

* eslint: turn off some rules I don't plan on fixing

* eslint: apply autofixes

* eslint: set eslint-env jest in test files

* fix "definition not found" error

* rollback some of the string slice fixes

the Math.max() notation seems a bit long and harder to read

* fix linter errors, remove dead code

* delete dead code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,5 @@
 {
 	"extends": "wikimedia",
-	"plugins": [
-        "jsdoc"
-    ],
 	"env": {
 		"browser": true,
 		"jquery": true
@@ -16,26 +13,24 @@
 		"OO": "readonly"
 	},
 	"rules": {
-		"camelcase": 0,
-		"eqeqeq": 0,
-		"jsdoc/require-param": 0,
-		"jsdoc/require-param-type": 0,
-		"jsdoc/require-returns": 0,
-		"max-len": 0,
-		"no-console": 0,
-		"no-global-assign": 0,
-		"no-implicit-globals": 0,
-		"no-new": 0,
-		"no-prototype-builtins": 0,
-		"no-shadow": 0,
-		"no-undef": 0,
-		"no-underscore-dangle": 0,
-		"no-unused-vars": 0,
-		"no-use-before-define": 0
-	},
-	"settings": {
-		"jsdoc": {
-			"ignoreInternal": true
-		}
+		"camelcase": "off",
+		"eqeqeq": "warn",
+		"jsdoc/require-param": "warn",
+		"jsdoc/require-param-type": "warn",
+		"jsdoc/require-returns": "warn",
+		"max-len": "off",
+		"no-console": "off",
+		"no-global-assign": "warn",
+		"no-implicit-globals": "warn",
+		"no-new": "warn",
+		"no-prototype-builtins": "off",
+		"no-shadow": "off",
+		"no-undef": "warn",
+		"no-underscore-dangle": "off",
+		"no-unused-vars": "warn",
+		"no-use-before-define": "warn",
+		"security/detect-non-literal-regexp": "off",
+		"security/detect-unsafe-regex": "off",
+		"unicorn/prefer-string-slice": "off"
 	}
 }
