allow es6 in test files (since they use node)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,16 @@
 		"mw": "writable",
 		"OO": "readonly"
 	},
+	"overrides": [
+		{
+			"files": [
+				"tests/*"
+			],
+			"parserOptions": {
+				"ecmaVersion": 6
+			}
+		}
+	],
 	"rules": {
 		"camelcase": "off",
 		"eqeqeq": "warn",
