.eslintrc.json: separate off and warn rules
easier to read. off rules are mostly "annoying" rules that we never plan on turning on. warn rules are rules that we plan on fixing, and the goal should be to fix things and turn those back on

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,19 +28,26 @@
 	],
 	"rules": {
 		"camelcase": "off",
+		"max-len": "off",
+		"no-console": "off",
+		"no-jquery/no-class-state": "off",
+		"no-jquery/no-extend": "off",
+		"no-jquery/no-global-selector": "off",
+		"no-prototype-builtins": "off",
+		"no-shadow": "off",
+		"no-underscore-dangle": "off",
+		"security/detect-non-literal-regexp": "off",
+		"security/detect-unsafe-regex": "off",
+		"unicorn/prefer-string-slice": "off",
+
 		"eqeqeq": "warn",
 		"es-x/no-array-prototype-includes": "warn",
 		"es-x/no-object-values": "warn",
 		"es-x/no-regexp-s-flag": "warn",
-		"max-len": "off",
-		"no-console": "off",
 		"no-global-assign": "warn",
 		"no-implicit-globals": "warn",
 		"no-jquery/no-animate": "warn",
-		"no-jquery/no-class-state": "off",
 		"no-jquery/no-each-util": "warn",
-		"no-jquery/no-extend": "off",
-		"no-jquery/no-global-selector": "off",
 		"no-jquery/no-grep": "warn",
 		"no-jquery/no-in-array": "warn",
 		"no-jquery/no-map-util": "warn",
@@ -49,14 +56,8 @@
 		"no-jquery/no-trim": "warn",
 		"no-jquery/variable-pattern": "warn",
 		"no-new": "warn",
-		"no-prototype-builtins": "off",
-		"no-shadow": "off",
 		"no-undef": "warn",
-		"no-underscore-dangle": "off",
 		"no-unused-vars": "warn",
-		"prefer-const": "warn",
-		"security/detect-non-literal-regexp": "off",
-		"security/detect-unsafe-regex": "off",
-		"unicorn/prefer-string-slice": "off"
+		"prefer-const": "warn"
 	}
 }
