--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "scripts": {
     "test": "grunt test",
-    "lint": "grunt lint"
+    "lint": "grunt lint",
+    "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
     "hogan.js": "^3.0.2"
   },
   "devDependencies": {
+    "commander": "^14.0.0",
     "eslint-config-wikimedia": "^0.28.2",
     "grunt": "^1.4.1",
     "grunt-autoprefixer": "^3.0.4",
@@ -29,7 +31,9 @@
     "grunt-eslint": "^24.3.0",
     "grunt-exec": "^3.0.0",
     "jest-cli": "^27.0.6",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "mwn": "^3.0.1",
+    "simple-git": "^3.28.0"
   },
   "jest": {
     "testEnvironment": "jsdom",
