server.js: move to scripts/server.js
Shouldn't really have code in the root directory. This spot is mainly for configs, readmes, etc.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "test": "grunt test",
     "lint": "grunt lint",
-    "deploy": "node scripts/deploy.js"
+    "deploy": "node scripts/deploy.js",
+    "start": "node scripts/server.js"
   },
   "dependencies": {
     "hogan.js": "^3.0.2"
