build: update eslint-config-wikmedia to 0.30.0
this will allow ES2016 and ES2017, which will unblock one of my other patches. plus other benefits.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
 		"no-global-assign": "warn",
 		"no-implicit-globals": "warn",
 		"no-jquery/no-animate": "warn",
+		"no-jquery/no-done-fail": "warn",
 		"no-jquery/no-each-util": "warn",
 		"no-jquery/no-grep": "warn",
 		"no-jquery/no-in-array": "warn",
