--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
 		"no-jquery/no-slide": "warn",
 		"no-jquery/no-trim": "warn",
 		"no-undef": "warn",
-		"prefer-const": "warn"
+		"prefer-const": "warn",
+		"unicorn/prefer-includes": "warn"
 	}
 }
