--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/wikimedia-gadgets/afc-helper.git"
   },
   "scripts": {
-    "test": "grunt test",
-    "lint": "grunt lint",
+    "test": "jest",
+    "lint": "eslint src tests Gruntfile.js",
     "deploy": "node scripts/deploy.js",
     "start": "node scripts/server.js"
   },
@@ -29,8 +29,6 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-less": "^3.0.0",
-    "grunt-eslint": "^24.3.0",
-    "grunt-exec": "^3.0.0",
     "jest-cli": "^27.0.6",
     "jquery": "^3.6.0",
     "mwn": "^3.0.1",
